syntax = "proto3";
package api;
import "enum.proto";

message Balance  {
  string     id              = 1; 
  string     user_id         = 2; 
  Venue      venue           = 3; 
  Currency   currency        = 4;
  double     available       = 5; 
  double     hold            = 6; 
  int64      last_change     = 7;
}